--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/indexhtml.css">
-		<meta name="keywords" content="consultoria, ambiental, engenheiro florestal, inventario florestal, meio ambiente, ambiente, bh, belo horizonte, mg, minas gerais, florestas, florestal, floresta, florestais, licenciamento, consultoria ambiental, licenciamento ambiental, aaf, eia, rima, auto de infraÁ„o, invent·rio florestal, invent·rio, nativas, eucalipto, madeira, celulose, carv„o, laudo, engenharia, engenheiro, sustentabilidade, sustent·vel, desenvolvimento, gest„o ambiental, engenheiro ambiental, engenheiro florestal, divinopolis, itauna, curvelo, sete lagoas, mariana, ouro preto, itabirito, congonhas, conselheiro lafaiete, lavras, nova serrana, abaete, joao monlevade, consultor, treinamento, aulas, meio ambiente, environment, environmental"/>
-		<meta content= "Invent·rio Florestal, Projetos e consultoria no setor de meio ambiente e florestas. Agilidade e preÁo competitivo. Confira." name="description">
+		<meta name="keywords" content="consultoria, ambiental, engenheiro florestal, inventario florestal, meio ambiente, ambiente, bh, belo horizonte, mg, minas gerais, florestas, florestal, floresta, florestais, licenciamento, consultoria ambiental, licenciamento ambiental, aaf, eia, rima, auto de infra√ß√£o, invent√°rio florestal, invent√°rio, nativas, eucalipto, madeira, celulose, carv√£o, laudo, engenharia, engenheiro, sustentabilidade, sustent√°vel, desenvolvimento, gest√£o ambiental, engenheiro ambiental, engenheiro florestal, divinopolis, itauna, curvelo, sete lagoas, mariana, ouro preto, itabirito, congonhas, conselheiro lafaiete, lavras, nova serrana, abaete, joao monlevade, consultor, treinamento, aulas, meio ambiente, environment, environmental"/>
+		<meta content= "Invent√°rio Florestal, Projetos e consultoria no setor de meio ambiente e florestas. Agilidade e pre√ßo competitivo. Confira." name="description">
 		<title>TM Consultoria Ambiental e Florestal - Home</title>
 		
 		<meta property='og:title' content='TM Consultoria Ambiental e Florestal"/>
 <meta property='og:image' content='/image/tmlogo0.png"/>
-<meta property='og:description' content='Licenciamento Ambiental, Invent·rio Florestal, Gest„o Ambiental, PerÌcias e Auditorias Ambientais"/>
+<meta property='og:description' content='Licenciamento Ambiental, Invent√°rio Florestal, Gest√£o Ambiental, Per√≠cias e Auditorias Ambientais"/>
 <meta property='og:url' content='www.tmambiental.com" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -47,9 +47,9 @@
 				<ul >
 					<a href="index.html"><li class="btnmenu"><a href="index.html">Home</a></li></a>
 					<a href="sobre.html"><li class="btnmenu">Sobre</li></a>
-					<a href="solucoes.html"><li class="btnmenu">SoluÁıes</li></a>
+					<a href="solucoes.html"><li class="btnmenu">Solu√ß√µes</li></a>
 					<a href="clientes.html"><li class="btnmenu">Clientes</li></a>
-					<a href="uteis.html"><li class="btnmenu">NotÌcias</li></a>
+					<a href="uteis.html"><li class="btnmenu">Not√≠cias</li></a>
 					<a href="contato.html"><li class="btnmenu">Contato</li></a>
 					
 				</ul> 
@@ -75,8 +75,8 @@
 					<div class="mainBox">
 						<h1>Quem somos</h1>
 						<img src="image/tucano.png" style="width:100%;height:auto;margin:auto;	">
-						<p>Com o objetivo de auxiliar do pequeno ao grande empreendedor, a TM Consultoria Ambiental est· apta a prestar serviÁos de engenharia, assessoria, consultoria e perÌcias no setor de meio ambiente e florestal. 
-						Nossa miss„o È adequar o seu negÛcio ‡s pr·ticas de sustentabilidade e dar todo o apoio tÈcnico ao empreendedor nos processos junto aos Ûrg„os ambientais.</p>
+						<p>Com o objetivo de auxiliar do pequeno ao grande empreendedor, a TM Consultoria Ambiental est√° apta a prestar servi√ßos de engenharia, assessoria, consultoria e per√≠cias no setor de meio ambiente e florestal. 
+						Nossa miss√£o √© adequar o seu neg√≥cio √†s pr√°ticas de sustentabilidade e dar todo o apoio t√©cnico ao empreendedor nos processos junto aos √≥rg√£os ambientais.</p>
 						<br><br>
 						<ul>
 						<a href="sobre.html"><li class="btnmenu2">Saiba mais</li></a>
@@ -86,27 +86,27 @@
 					</div>
 					
 					<div class="mainBox" >
-						<h1>AtuaÁ„o</h1>
+						<h1>Atua√ß√£o</h1>
 						<img src="image/fungo1.jpg" style="width:100%;height:auto;margin:auto;	" >
-						<p >Estamos prontos para atuar em invent·rios florestais, licenciamentos ambientais, perÌcias e assessoria ambiental, seja em ·rea urbana ou rural.
-						Contamos com a parceria de profissionais de diversas ·reas para encontrar a melhor soluÁ„o para vocÍ com honestidade e preÁo compatÌvel com o serviÁo.<br><br>Contate-nos!</p>
+						<p >Estamos prontos para atuar em invent√°rios florestais, licenciamentos ambientais, per√≠cias e assessoria ambiental, seja em √°rea urbana ou rural.
+						Contamos com a parceria de profissionais de diversas √°reas para encontrar a melhor solu√ß√£o para voc√™ com honestidade e pre√ßo compat√≠vel com o servi√ßo.<br><br>Contate-nos!</p>
 					<br><br>
 					<ul>
 						<a href="contato.html"><li class="btnmenu2">Saiba mais</li></a>
 					</ul>
 					</div>
 					<div class="mainBox" >
-						<h1>ServiÁos</h1>
+						<h1>Servi√ßos</h1>
 						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;	">
-						<p>Realizamos consultorias, assessorias e perÌcias em:<br><br>
-						&nbsp;&nbsp;ï Licenciamento Ambiental <br>
-						&nbsp;&nbsp;ï Invent·rios Florestais <br>
-						&nbsp;&nbsp;ï Cadastro Ambiental Rural (CAR) <br> 
-						&nbsp;&nbsp;ï Sistemas de Gest„o Ambiental (SGA) <br>
-						&nbsp;&nbsp;ï PerÌcias em meio ambiente <br>
-						&nbsp;&nbsp;ï ObtenÁ„o de licenÁas e selos<br>
-						&nbsp;&nbsp;ï ReguralarizaÁ„o Ambiental <br>
-						&nbsp;&nbsp;ï Planejamento Florestal<br><br> </p>
+						<p>Realizamos consultorias, assessorias e per√≠cias em:<br><br>
+						&nbsp;&nbsp;‚Ä¢ Licenciamento Ambiental <br>
+						&nbsp;&nbsp;‚Ä¢ Invent√°rios Florestais <br>
+						&nbsp;&nbsp;‚Ä¢ Cadastro Ambiental Rural (CAR) <br> 
+						&nbsp;&nbsp;‚Ä¢ Sistemas de Gest√£o Ambiental (SGA) <br>
+						&nbsp;&nbsp;‚Ä¢ Per√≠cias em meio ambiente <br>
+						&nbsp;&nbsp;‚Ä¢ Obten√ß√£o de licen√ßas e selos<br>
+						&nbsp;&nbsp;‚Ä¢ Reguralariza√ß√£o Ambiental <br>
+						&nbsp;&nbsp;‚Ä¢ Planejamento Florestal<br><br> </p>
 					<ul>
 						<a href="solucoes.html"><li class="btnmenu2">Saiba mais</li></a>
 					</ul> 
