--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/indexhtml.css">
 		<meta name="keywords" content="consultoria, ambiental, engenheiro florestal, inventario florestal, meio ambiente, ambiente, bh, belo horizonte, mg, minas gerais, florestas, florestal, floresta, florestais, licenciamento, consultoria ambiental, licenciamento ambiental, aaf, eia, rima, auto de infração, inventário florestal, inventário, nativas, eucalipto, madeira, celulose, carvão, laudo, engenharia, engenheiro, sustentabilidade, sustentável, desenvolvimento, gestão ambiental, engenheiro ambiental, engenheiro florestal, divinopolis, itauna, curvelo, sete lagoas, mariana, ouro preto, itabirito, congonhas, conselheiro lafaiete, lavras, nova serrana, abaete, joao monlevade, consultor, treinamento, aulas, meio ambiente, environment, environmental"/>
 		<meta content= "Inventário Florestal, Projetos e consultoria no setor de meio ambiente e florestas. Agilidade e preço competitivo. Confira." name="description">
