--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
 					<div class="mainBox" >
 						<h1>Serviços</h1>
 						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;	">
-						<p>Realizamos consultorias, assessorias e perícias em:<br><br>
+						<p>Realizamos serviços de:<br><br>
 						&nbsp;&nbsp;• Licenciamento Ambiental <br>
 						&nbsp;&nbsp;• Inventários Florestais <br>
-						&nbsp;&nbsp;• Cadastro Ambiental Rural (CAR) <br> 
-						&nbsp;&nbsp;• Sistemas de Gestão Ambiental (SGA) <br>
+						&nbsp;&nbsp;• Levantamentos Topográficos <br> 
+						&nbsp;&nbsp;• Fotografia aérea e mapeamentos <br> 
+						&nbsp;&nbsp;• Sistemas de Gestão Ambiental (SGA)<br>
 						&nbsp;&nbsp;• Perícias em meio ambiente <br>
-						&nbsp;&nbsp;• Obtenção de licenças e selos<br>
+						&nbsp;&nbsp;• Projeto e Execução de PTRF/PRAD<br>
 						&nbsp;&nbsp;• Reguralarização Ambiental <br>
 						&nbsp;&nbsp;• Planejamento Florestal<br><br> </p>
 					<ul>
