--- a/solucoes.html
+++ b/solucoes.html
@@ -51,19 +51,19 @@
 						<p >Realizamos o levantamento de dados e estudo de áreas, como inventários florestais e mapeamentos para subsidiar estuds e projetos, tais como:
 
 								<br><br>&nbsp;&nbsp;• Inventários Florestais:
-								<br><br>&nbsp;&nbsp;&nbsp;- Floresta Nativa para DAIA 
-								<br><br>&nbsp;&nbsp;&nbsp;- Inventário de Plantios Exóticos (Eucalipto, Mogno, etc.)
-								<br><br>&nbsp;&nbsp;&nbsp;- Inventário Florestal Contínuo e Projeção Florestal
-								<br><br>&nbsp;&nbsp;&nbsp;- Processamento de Dados de Inventário Florestal
-								<br><br>&nbsp;&nbsp;&nbsp;- Quantificação de Carvão e Biomassa Florestal
-								<br><br>&nbsp;&nbsp;&nbsp;- Treinamento de equipes
-								<br><br>&nbsp;&nbsp;&nbsp;• Levantamentos de meio biótico para fins de EIA/RIMA
+								<br>&nbsp;&nbsp;&nbsp;- Floresta Nativa para DAIA 
+								<br>&nbsp;&nbsp;&nbsp;- Inventário de Plantios Exóticos (Eucalipto, Mogno, etc.)
+								<br>&nbsp;&nbsp;&nbsp;- Inventário Florestal Contínuo e Projeção Florestal
+								<br>&nbsp;&nbsp;&nbsp;- Processamento de Dados de Inventário Florestal
+								<br>&nbsp;&nbsp;&nbsp;- Quantificação de Carvão e Biomassa Florestal
+								<br>&nbsp;&nbsp;&nbsp;- Treinamento de equipes
+								<br>&nbsp;&nbsp;&nbsp;• Levantamentos de meio biótico para fins de EIA/RIMA
 								<br><br>&nbsp;&nbsp;• Levantamentos Topográficos e Aéreos:
-								<br><br>&nbsp;&nbsp;&nbsp;- Planialtimétrico e Planimétrico
-								<br><br>&nbsp;&nbsp;&nbsp;- Georreferenciamento de Imóveis
-								<br><br>&nbsp;&nbsp;&nbsp;- Alocação de pontos e divisas
-								<br><br>&nbsp;&nbsp;&nbsp;- Fotografia Aérea com Drones
-								<br><br>&nbsp;&nbsp;&nbsp;- Ortofoto georreferenciada
+								<br>&nbsp;&nbsp;&nbsp;- Planialtimétrico e Planimétrico
+								<br>&nbsp;&nbsp;&nbsp;- Georreferenciamento de Imóveis
+								<br>&nbsp;&nbsp;&nbsp;- Alocação de pontos e divisas
+								<br>&nbsp;&nbsp;&nbsp;- Fotografia Aérea com Drones
+								<br>>&nbsp;&nbsp;&nbsp;- Ortofoto georreferenciada
 							</p>
 						<br><br>
 					
@@ -78,11 +78,11 @@
 							<br><br>&nbsp;&nbsp;• Gestão de Resíduos Industriais
 							<br><br>&nbsp;&nbsp;• Sistemas de Gestão e Controle Ambiental
 							<br><br>&nbsp;&nbsp;• Licenciamento Ambiental: 
-							<br><br>&nbsp;&nbsp;&nbsp;- Estudo de Impacto Ambiental e Relatório de Impacto Ambiental (EIA/RIMA) 
-							<br><br>&nbsp;&nbsp;&nbsp;- Plano de Controle Ambiental e Relatório de Controle Ambiental (PCA/RCA) 
-							<br><br>&nbsp;&nbsp;&nbsp;- Plano de Recuperação de Áreas Degradadas e Recomposição de Flora (PRAD/PTRF) 
-							<br><br>&nbsp;&nbsp;&nbsp;- Plano de Utilização Pretendida (PUP) 
-							<br><br>&nbsp;&nbsp;&nbsp;- Projetos de Compensação Ambiental e Florestal
+							<br>&nbsp;&nbsp;&nbsp;- Estudo de Impacto Ambiental e Relatório de Impacto Ambiental (EIA/RIMA) 
+							<br>&nbsp;&nbsp;&nbsp;- Plano de Controle Ambiental e Relatório de Controle Ambiental (PCA/RCA) 
+							<br>&nbsp;&nbsp;&nbsp;- Plano de Recuperação de Áreas Degradadas e Recomposição de Flora (PRAD/PTRF) 
+							<br>&nbsp;&nbsp;&nbsp;- Plano de Utilização Pretendida (PUP) 
+							<br>&nbsp;&nbsp;&nbsp;- Projetos de Compensação Ambiental e Florestal
 							<br>&nbsp;&nbsp;&nbsp;- Relatório de Avaliação de Desempenho Ambiental (RADA) 
 							<br><br>&nbsp;&nbsp;• Outorga de uso da água
 							<br><br>&nbsp;&nbsp;• Defesa de autos de infração
@@ -99,12 +99,12 @@
 
 							<br><br>&nbsp;&nbsp;&nbsp;• Projeto Técnico de Reconstituição de Flora (PTRF)
 							<br><br>&nbsp;&nbsp;&nbsp;• Execução de Plantios e Recuperação de Áreas
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Análise de Solo e cálculo de fertilizantes 
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Controle de formigas e cupins, outras pragas e doenças
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Controle de forrageiras (capim)
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Plantio de Mudas Nativas ou Exóticas
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Atividades de condução florestal
-							<br><br>&nbsp;&nbsp;&nbsp;&nbsp;- Monitoramento de plantios de recuperação
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Análise de Solo e cálculo de fertilizantes 
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Controle de formigas e cupins, outras pragas e doenças
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Controle de forrageiras (capim)
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Plantio de Mudas Nativas ou Exóticas
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Atividades de condução florestal
+							<br>&nbsp;&nbsp;&nbsp;&nbsp;- Monitoramento de plantios de recuperação
 
 </p>
 					
