--- a/solucoes.html
+++ b/solucoes.html
@@ -77,7 +77,7 @@
 						<img src="image/fungo1.jpg" style="width:100%;height:auto;margin:auto;	" >
 						<p >Com as mudanças ambientais ocorridas nos últimos anos, incluindo a legislação, se faz necessário licenciar e regularizar empreendimentos possivelmente impactantes. Neste sentido, atuamos com: 
 
-							<br>&nbsp;&nbsp;• Cadastro Ambiental Rural (CAR) e Reserva Legal
+							<br><br>&nbsp;&nbsp;• Cadastro Ambiental Rural (CAR) e Reserva Legal
 							<br>&nbsp;&nbsp;• Gestão de Resíduos Industriais
 							<br><br>&nbsp;&nbsp;• Sistemas de Gestão e Controle Ambiental
 							<br>&nbsp;&nbsp;• Licenciamento Ambiental: 
@@ -118,7 +118,7 @@
 						<img src="image/forest4.png" style="width:100%;height:auto;margin:auto;	">
 						<p>Fornecemos assessoria, consultoria e composição de equipe técnica para projetos de maior tamanho ou complexidade, visando cobrir os assuntos relacionados à sustentabilidade, tais como: 
 
-							<br>&nbsp;&nbsp;&nbsp;• Loteamentos e parcelamentos de solo; 
+							<br><br>&nbsp;&nbsp;&nbsp;• Loteamentos e parcelamentos de solo; 
 							<br>&nbsp;&nbsp;&nbsp;• Perícias Judiciais em Meio Ambiente e Florestas
 							<br>&nbsp;&nbsp;&nbsp;• Acompanhamento de processos ambientais
 							<br>&nbsp;&nbsp;&nbsp;• Análise de densidade e qualidade de madeira
