--- a/solucoes.html
+++ b/solucoes.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="mainBox" >
 						<h1>Planejamento e Execução de Recuperação Ambiental e Florestal</h1>
-						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;	">
+						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;	min-height:640">
 						<p>Realizamos a execução de projetos de recuperação de áreas degradas e reconstituição de flora (PRAD/PTRF), desde a concepção do projetos até o último relatório de monitoramento. 
 							Dentre essas atividades estão: 
 
@@ -115,7 +115,7 @@
 
 					<div class="mainBox" >
 						<h1>Complementação de projetos</h1>
-						<img src="image/forest4.png" style="width:100%;height:auto;margin:auto;	">
+						<img src="image/forest4.png" style="width:100%;height:auto;margin:auto;min-height:640	">
 						<p>Fornecemos assessoria, consultoria e composição de equipe técnica para projetos de maior tamanho ou complexidade, visando cobrir os assuntos relacionados à sustentabilidade, tais como: 
 
 							<br><br>&nbsp;&nbsp;&nbsp;• Loteamentos e parcelamentos de solo; 
