--- a/solucoes.html
+++ b/solucoes.html
@@ -94,9 +94,9 @@
 					<br>
 					
 					</div>
-					<div class="mainBox" >
+					<div class="mainBox" style="min-height:640">
 						<h1>Planejamento e Execução de Recuperação Ambiental e Florestal</h1>
-						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;	min-height:640">
+						<img src="image/forest3.png" style="width:100%;height:auto;margin:auto;">
 						<p>Realizamos a execução de projetos de recuperação de áreas degradas e reconstituição de flora (PRAD/PTRF), desde a concepção do projetos até o último relatório de monitoramento. 
 							Dentre essas atividades estão: 
 
@@ -113,9 +113,9 @@
 					
 					</div>
 
-					<div class="mainBox" >
+					<div class="mainBox" style="min-height:640">
 						<h1>Complementação de projetos</h1>
-						<img src="image/forest4.png" style="width:100%;height:auto;margin:auto;min-height:640	">
+						<img src="image/forest4.png" style="width:100%;height:auto;margin:auto;	">
 						<p>Fornecemos assessoria, consultoria e composição de equipe técnica para projetos de maior tamanho ou complexidade, visando cobrir os assuntos relacionados à sustentabilidade, tais como: 
 
 							<br><br>&nbsp;&nbsp;&nbsp;• Loteamentos e parcelamentos de solo; 
