--- a/solucoes.html
+++ b/solucoes.html
@@ -66,7 +66,7 @@
 								<br>&nbsp;&nbsp;&nbsp;- Georreferenciamento de Imóveis
 								<br>&nbsp;&nbsp;&nbsp;- Alocação de pontos e divisas
 								<br>&nbsp;&nbsp;&nbsp;- Fotografia Aérea com Drones
-								<br>&nbsp;&nbsp;&nbsp;- Ortofoto georreferenciada
+								<br>&nbsp;&nbsp;&nbsp;- Ortofotos georreferenciadas
 							</p>
 						<br><br>
 					
