--- a/uteis.html
+++ b/uteis.html
@@ -48,7 +48,7 @@
 					<div class="mainBox">
 						<h1>Caracterização de Vegetação</h1>
 						
-						<p>Caracterização de vegetação para Estudo Ambiental
+						<p>Caracterização de vegetação para Estudo de Prévio Ambiental
 
 								<br><br>&nbsp;&nbsp;• Serviços executados
 								<br>&nbsp;&nbsp;&nbsp;- Descrição Física e Biótica 
@@ -56,7 +56,7 @@
 								<br>&nbsp;&nbsp;&nbsp;- Levantamento de áreas protegidas, hidrografia e APP
 								<br>&nbsp;&nbsp;&nbsp;- Inventário Florestal de Mata Nativa
 								<br>&nbsp;&nbsp;&nbsp;- Levantamento secundário de flora
-								<br>
+								<br><br>
 								<img src="portfolioimg/port1-1.jpg" style="width:100%;height:auto;margin:auto;	">
 								<img src="portfolioimg/port1-2.jpg" style="width:100%;height:auto;margin:auto;	">
 							</p>
