--- a/uteis.html
+++ b/uteis.html
@@ -51,13 +51,16 @@
 						<p>Caracterização de vegetação para Estudo de Prévio Ambiental
 
 								<br><br>&nbsp;&nbsp;• Serviços executados
-								<br>&nbsp;&nbsp;&nbsp;- Descrição Física e Biótica 
+								<br>&nbsp;&nbsp;&nbsp;- Descrição Física e Biótica do Local
 								<br>&nbsp;&nbsp;&nbsp;- Classificação da vegetação em mais de 13.000 ha
 								<br>&nbsp;&nbsp;&nbsp;- Levantamento de áreas protegidas, hidrografia e APP
 								<br>&nbsp;&nbsp;&nbsp;- Inventário Florestal de Mata Nativa
-								<br>&nbsp;&nbsp;&nbsp;- Levantamento secundário de flora
+								<br>&nbsp;&nbsp;&nbsp;- Processamento de Inventário Florestal
+								<br>&nbsp;&nbsp;&nbsp;- Levantamentos secundários de flora
 								<br><br>
-								<img src="portfolioimg/port1-1.jpg" style="width:100%;height:auto;margin:auto;	">
+								Levantamento de Dados Primários de Flora<br>
+								<img src="portfolioimg/port1-1.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
+								Classificação da vegetação por imagens do satélite CBERS-04A auxiliado por NDVI<br>
 								<img src="portfolioimg/port1-2.jpg" style="width:100%;height:auto;margin:auto;	">
 							</p>
 						<br><br>
