--- a/uteis.html
+++ b/uteis.html
@@ -79,7 +79,7 @@
 								<br>&nbsp;&nbsp;&nbsp;- Monitoramento de condução
 								<br><br>
 								Execução de plantio para compensação ambiental<br>
-								<img src="portfolioimg/port2-1.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
+								<img src="portfolioimg/port2-1.png" style="width:100%;height:auto;margin:auto;	"><br><br>
 							</p>
 					<br>
 					
