--- a/uteis.html
+++ b/uteis.html
@@ -103,14 +103,14 @@
 					</div>
 
 					<div class="mainBox" style="min-height:640">
-						<h1>Diagnóstico Ambiental de estações radio-base</h1>
+						<h1>Diagnóstico Ambiental de estações rádio-base</h1>
 						
 						<p>Levantamento das características ambientais de estações rádio-base de telefonia celular
 
 								<br><br>&nbsp;&nbsp;• Serviços executados
 								<br>&nbsp;&nbsp;&nbsp;- Caracterização ambiental da situação do <i>site</i>
 								<br>&nbsp;&nbsp;&nbsp;- Elaboração de plantas <i>as-built</i> 
-								<br>&nbsp;&nbsp;&nbsp;- Elaboração de relatórios <i>as-built</i> 
+								<br>&nbsp;&nbsp;&nbsp;- Elaboração e revisão de relatórios
 
 								<br><br>
 								Caracterização ambiental de estações rádio-base<br>
