--- a/clientes.html
+++ b/clientes.html
@@ -21,7 +21,7 @@
 					<a href="sobre.html"><li class="btnmenu">Sobre</li></a>
 					<a href="solucoes.html"><li class="btnmenu">Soluções</li></a>
 					<a href="clientes.html"><li class="btnmenu">Clientes</li></a>
-					<a href="uteis.html"><li class="btnmenu">Notícias</li></a>
+					<a href="uteis.html"><li class="btnmenu">Portfólio</li></a>
 					<a href="contato.html"><li class="btnmenu">Contato</li></a>
 					
 				</ul> 
