--- a/contato.html
+++ b/contato.html
@@ -4,10 +4,11 @@ header('Content-Type: text/html; charset=ISO-8859-15');
 ?>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/contatohtml.css">
-		<meta name="keywords" content="consultoria, ambiental, engenheiro florestal, inventario florestal, meio ambiente, ambiente, bh, belo horizonte, mg, minas gerais, florestas, florestal, floresta, florestais, licenciamento, consultoria ambiental, licenciamento ambiental, aaf, eia, rima, auto de infração, inventário florestal, inventário, nativas, eucalipto, madeira, celulose, carvão, laudo, engenharia, engenheiro, sustentabilidade, sustentável, desenvolvimento, gestão ambiental, engenheiro ambiental, engenheiro florestal, divinopolis, itauna, curvelo, sete lagoas, mariana, ouro preto, itabirito, congonhas, conselheiro lafaiete, lavras, nova serrana, abaete, joao monlevade, consultor, treinamento, aulas, meio ambiente, environment, environmental"/>
-		<meta content= "Projetos e consultoria no setor de meio ambiente e florestas. Agilidade e preço competitivo. Confira." name="description">
+		<meta name="keywords" content="consultoria, ambiental, engenheiro florestal, inventario florestal, meio ambiente, ambiente, bh, belo horizonte, mg, minas gerais, florestas, florestal, floresta, florestais, licenciamento, consultoria ambiental, licenciamento ambiental, aaf, eia, rima, auto de infraÃ§Ã£o, inventÃ¡rio florestal, inventÃ¡rio, nativas, eucalipto, madeira, celulose, carvÃ£o, laudo, engenharia, engenheiro, sustentabilidade, sustentÃ¡vel, desenvolvimento, gestÃ£o ambiental, engenheiro ambiental, engenheiro florestal, divinopolis, itauna, curvelo, sete lagoas, mariana, ouro preto, itabirito, congonhas, conselheiro lafaiete, lavras, nova serrana, abaete, joao monlevade, consultor, treinamento, aulas, meio ambiente, environment, environmental"/>
+		<meta content= "Projetos e consultoria no setor de meio ambiente e florestas. Agilidade e preÃ§o competitivo. Confira." name="description">
 		<title>TM Consultoria Ambiental e Florestal - Sobre</title>
 	</head>
 	
@@ -21,9 +22,9 @@ header('Content-Type: text/html; charset=ISO-8859-15');
 				<ul >
 					<a href="index.html"><li class="btnmenu">Home</li></a>
 					<a href="sobre.html"><li class="btnmenu">Sobre</li></a>
-					<a href="solucoes.html"><li class="btnmenu">Soluções</li></a>
+					<a href="solucoes.html"><li class="btnmenu">SoluÃ§Ãµes</li></a>
 					<a href="clientes.html"><li class="btnmenu">Clientes</li></a>
-					<a href="uteis.html"><li class="btnmenu">Notícias</li></a>
+					<a href="uteis.html"><li class="btnmenu">PortfÃ³lio</li></a>
 					<a href="contato.html"><li class="btnmenu">Contato</li></a>
 					
 				</ul> 
@@ -51,7 +52,7 @@ header('Content-Type: text/html; charset=ISO-8859-15');
 						<h1>Contato</h1>
 						
 							<p>
-								Resp. Técnico: Tarço M. O. Luz<br>Engº Florestal - CREA-MG: 159.182/D<br>Mestre em Ciência Florestal<br><br>E-mail: contato@tmambiental.com<br>Telefone: (31) 9 9383 - 7795<br>
+								Resp. TÃ©cnico: TarÃ§o M. O. Luz<br>EngÂº Florestal - CREA-MG: 159.182/D<br>Mestre em CiÃªncia Florestal<br><br>E-mail: contato@tmambiental.com<br>Telefone: (31) 9 9383 - 7795<br>
 							</p>
 							<p>
 							<form action="assinar.php" method="POST">
