--- a/solucoes.html
+++ b/solucoes.html
@@ -79,7 +79,7 @@
 
 							<br><br>&nbsp;&nbsp;• Cadastro Ambiental Rural (CAR) e Reserva Legal
 							<br>&nbsp;&nbsp;• Gestão de Resíduos Industriais
-							<br><br>&nbsp;&nbsp;• Sistemas de Gestão e Controle Ambiental
+							<br>&nbsp;&nbsp;• Sistemas de Gestão e Controle Ambiental
 							<br>&nbsp;&nbsp;• Licenciamento Ambiental: 
 							<br>&nbsp;&nbsp;&nbsp;- Estudo de Impacto Ambiental e Relatório de Impacto Ambiental (EIA/RIMA) 
 							<br>&nbsp;&nbsp;&nbsp;- Plano de Controle Ambiental e Relatório de Controle Ambiental (PCA/RCA) 
