--- a/uteis.html
+++ b/uteis.html
@@ -112,9 +112,9 @@
 
 								<br><br>
 								Elaboração do modelo tridimensional do terreno<br>
-								<img src="portfolioimg/port5-1.png" style="width:100%;height:auto;margin:auto;	"><br><br>
+								<img src="portfolioimg/port5-1.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
 								Fotografias ortorretificadas e georreferenciadas<br>
-								<img src="portfolioimg/port5-2.png" style="width:100%;height:auto;margin:auto;	"><br><br>
+								<img src="portfolioimg/port5-2.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
 							</p>
 					<br>
 					
