--- a/uteis.html
+++ b/uteis.html
@@ -115,7 +115,7 @@
 								<img src="portfolioimg/port5-3.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
 								Fotografias ortorretificadas e georreferenciadas<br>
 								<img src="portfolioimg/port5-4.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
-								Curvas de Nível e mensuração de volumes<br>
+								Curvas de Nível e mensuração de volume<br>
 								<img src="portfolioimg/port5-5.jpg" style="width:100%;height:auto;margin:auto;	"><br><br>
 							</p>
 					<br>
